Ensure mobile menu icon appears only on mobile.

--- a/components/tabs/scss/tabs.scss
+++ b/components/tabs/scss/tabs.scss
@@ -33,21 +33,23 @@ header {
   white-space: nowrap;
   overflow: auto;
   position: relative;
-  &:after {
-    content: "☰";
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    z-index: 2;
-    pointer-events: none;
-  }
 
-  &.m-is-active {
-    a {
-      position: relative;
+  @media (max-width: $med) {
+    &:after {
+      content: "☰";
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      z-index: 2;
+      pointer-events: none;
+    }
+
+    &.m-is-active {
+      a {
+        position: relative;
+      }
     }
   }
-
 }
 
 .tab-item {
